syntax = 'proto3';

package engine;

message PayoutPB {
    int32 symbol = 1;
    int32 count = 2;
    int32 multiplier = 3;
}

message PrizePB {
    PayoutPB payout = 1;
    int32 multiplier = 2;
    repeated int32 symbol_positions = 3;
    int32 winline = 4;
}

enum Ccy {
  DEFAULT = 0;
  CNY = 1;
  USD = 2;
  GBP = 3;
  EUR = 4;
  JPY = 6;
  THB = 7;
  MYR = 8;
  VND = 9;
  KRW = 10;
  IDR = 11;
  ZAR = 12;
  XBT = 13;
  TRY = 14;
  AMD = 15;
  NOK = 16;
  SEK = 17;
  RUB = 18;
  KZT = 19;
  MMK = 20;
  MXN = 21;
  BOB = 22;
  PYG = 23;
  PEN = 24;
  CLP = 25;
  UYU = 26;
  CAD = 27;
  AED = 28;
  ALL = 29;
  AOA = 30;
  ARS = 31;
  AUD = 32;
  AZN = 33;
  BAM = 34;
  BDT = 35;
  BGN = 36;
  BHD = 37;
  BND = 38;
  BWP = 39;
  CDF = 40;
  CHF = 41;
  CRC = 42;
  COP = 43;
  CZK = 44;
  DKK = 45;
  DOP = 46;
  EGP = 47;
  GEL = 48;
  GHS = 49;
  GIP = 50;
  GNF = 51;
  GTQ = 52;
  HKD = 53;
  HRK = 54;
  HTG = 55;
  HUF = 56;
  ILS = 57;
  INR = 58;
  IQL = 59;
  IRR = 60;
  ISK = 61;
  JOD = 62;
  KES = 63;
  KWD = 64;
  LBP = 65;
  LSL = 66;
  MAD = 67;
  MBC = 68;
  MKB = 69;
  MWK = 70;
  NAD = 71;
  NGN = 72;
  NZD = 73;
  OMR = 74;
  ZMW = 75;
  PHP = 76;
  PLN = 77;
  XOF = 78;
  QAR = 79;
  RON = 80;
  RSD = 81;
  RWF = 82;
  SAR = 83;
  SGD = 84;
  TMT = 85;
  TND = 86;
  TWD = 87;
  TZS = 88;
  UAH = 89;
  UBC = 90;
  UGX = 91;
  XAF = 92;
  VES = 93;
}

message WalletTransactionPB {
  string id = 1;
  int64 amount = 2;
  enum Type {
  DEFAULT = 0;
  WAGER = 1;
  PAYOUT = 2;
  ENDROUND = 3;
  }
  Type type = 3;
  Ccy currency = 4;
}

message GamestatePB {
  enum GameID {
  DEFAULT = 0;
  THE_YEAR_OF_ZHU = 1;
  ZODIAC = 2;
  CAT_THIEF = 3;
  THREE_KINGDOM_SHU = 4;
  THREE_KINGDOM_WEI = 5;
  THREE_KINGDOM_WU = 6;
  CRIMSON_MASQUERADE = 7;
  JUNGLE_SAGA = 8;
  CANDY_GIRLS = 9;
  WUKONG_TREASURES = 10;
  STREET_RACER = 11;
  BABAKS_QUEST = 12;
  ASTRO_GEMS = 13;
  PANDA = 14;
  KING_OF_GAMBLERS = 15;
  ART_OF_THE_FIST = 16;
  SEASONS_WINTER = 17;
  SEASONS_SPRING = 18;
  SEASONS_SUMMER = 19;
  SEASONS_AUTUMN = 20;
  SEASONS = 21;
  FRUITY_VERSE = 22;
  A_FAIRY_TALE = 23;
  A_HIDDEN_FOREST = 24;
  BATTLEMECH = 25;
  A_MILLION_LIGHTS = 26;
  BISTRO = 27;
  CLOUD9 = 28;
  LANTERN_FESTIVAL = 29;
  A_CANDY_GIRLS_CHRISTMAS = 30;
  SKY_JEWELS = 31;
  PEARL_FISHER = 32;
  GOAL = 33;
  DAYTONA = 34;
  A_YEAR_OF_LAOSHU = 35;
  DRAGON_MYST = 36;
  COOKOFF_CHAMPION = 37;
  CANDY_SMASH = 38;
  VALLEY_OF_KINGS=39;
  CRAZY_EASTER_EGGS=40;
  DRIFT=41;
  }
  GameID game_id = 1;
  int32 engine_def = 2;
  int64 bet_per_line = 3;
  Ccy currency = 4;
  bytes previous_gamestate = 5;
  bytes next_gamestate = 6;
  enum Action {
  base = 0;
  finish = 1;
  freespin = 2;
  pickSpins = 3;
  respin = 4;
  freespin2 = 5;
  freespin3 = 6;
  freespin4 = 7;
  freespin5 = 8;
  freespin10 = 9;
  freespin25 = 10;
  cascade = 11;
  }
  Action action = 7;

  message Reel {
      repeated int32 symbols = 1;
  }
  repeated Reel symbol_grid = 8;
  repeated PrizePB prizes = 9;
  repeated int32 selected_win_lines = 10;
  int32 relative_payout = 11;
  int32 multiplier = 12;
  repeated int32 stop_list = 13;
  repeated Action next_actions = 14;

  message Gamification {
      int32 level = 1;
      int32 stage = 2;
      int32 remaining_spins = 3;
      int32 spins_to_stage_up = 4;
      int32 total_spins = 5;
  }
  Gamification gamification = 15;
  int64 cumulative_win = 16;
  int32 play_sequence = 17;
  repeated WalletTransactionPB transactions = 18;
  bool closed = 19;
  string round_id = 20;
}
